# nao-play-request

./: CMakeLists.txt  README.md  qiproject.xml
include/: logmodule_ja.hpp~  logmodule_pr.hpp  uimodule_pr.hpp
src/: logmodule_loader_ja.cpp~  logmodule_loader_pr.cpp  logmodule_loader_pr.cpp~  logmodule_pr.cpp  logmodule_pr.cpp~  uimodule_loader_ja.cpp~  uimodule_loader_pr.cpp  uimodule_loader_pr.cpp~  uimodule_pr.cpp  uimodule_pr.cpp~
